--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.3",
+        "path": "^0.12.7",
         "sequelize": "^6.21.3",
         "sequelize-fn": "^1.0.4"
     },
